kubernetes-manifests/istio/helloworld/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  #host: helloworld
  host: helloworld.default.svc.cluster.local
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
