kubernetes-manifests/istio/helloworld/istio-virtualservice-blue10-green90.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld  # helloworld.default.svc.cluster.local
        port:
          number: 5000
        subset: green
      weight: 90
    - destination:
        host: helloworld  # helloworld.default.svc.cluster.local
        port:
          number: 5000
        subset: blue
      weight: 10
