kubernetes-manifests/istio/helloworld/istio-virtualservice-conditional.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - headers:
        foo:
          exact: bar
    route:
    - destination:
        host: helloworld  # helloworld.default.svc.cluster.local
        port:
          number: 5000
        subset: green
  - route:
    - destination:
        host: helloworld  # helloworld.default.svc.cluster.local
        port:
          number: 5000
        subset: blue
